increasing loglevel under production

--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -1,13 +1,22 @@
 # This is the WormBase Log4perl configuration file.
 
 # The root logger has a very low threshold for development
-log4perl.rootlogger=FATAL, logfile
+log4perl.rootlogger=DEBUG, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
 log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/$hostname-access.log" };
 #log4perl.appender.logfile.filename=/usr/local/wormbase/logs/webapp/access.log
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
+
+# separate logger for cache
+log4perl.logger.CHI=DEBUG, cache
+log4perl.appender.cache=Log::Log4perl::Appender::File
+log4perl.appender.cache.filename=logs/cache.log
+log4perl.appender.cache.mode=append
+log4perl.appender.cache.layout=PatternLayout
+log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
+
 
 # Log AQL/WQL queries
 log4perl.logger.WormBase.Web.Controller.Tools.Queries  = INFO, querylog
