--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -10,12 +10,12 @@ log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 
 # separate logger for cache
-log4perl.logger.CHI=DEBUG, cache
-log4perl.appender.cache=Log::Log4perl::Appender::File
-log4perl.appender.cache.filename=logs/cache.log
-log4perl.appender.cache.mode=append
-log4perl.appender.cache.layout=PatternLayout
-log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
+#log4perl.logger.CHI=DEBUG, cache
+#log4perl.appender.cache=Log::Log4perl::Appender::File
+#log4perl.appender.cache.filename=logs/cache.log
+#log4perl.appender.cache.mode=append
+#log4perl.appender.cache.layout=PatternLayout
+#log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
 
 
 # Log AQL/WQL queries
