* proxy config for wormmine in production * here goes! * cross your fingers!

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -95,11 +95,12 @@ http {
 
     # A pool of hosts running starman, driving www.
     upstream wormbase  {
-       # Amazon instance - eleastic IP of 50.19.229.229
-       server 10.98.131.95:5000   weight=10 max_fails=2000 fail_timeout=1m;
+#       # Amazon instance - eleastic IP of 50.19.229.229
+       server 10.98.131.95:5000   weight=10 max_fails=4000 fail_timeout=1m;
        
        # Amazon 2nd instance
-       server 10.80.205.138:5000     weight=10 max_fails=2000 fail_timeout=1m;
+       server 10.224.7.171:5000    weight=10 max_fails=4000 fail_timeout=1m;
+#       server 10.76.254.176:5000    weight=10 max_fails=4000 fail_timeout=1m;
     }  
 
     # Data mining specific queries
@@ -107,6 +108,12 @@ http {
        # wb-mining @ oicr
        server 206.108.125.178:5000 weight=10 max_fails=200  fail_timeout=1m;
     }
+
+
+    upstream intermine-production  {
+         server 206.108.125.166:8080 weight=10 max_fails=200  fail_timeout=1m;
+    }
+
 
     # Couchdb hosted in the cloud.
     # Any of our nodes could serve as failover - just need
@@ -130,6 +137,11 @@ http {
 
     upstream couchdb-staging {
         server 206.108.125.164:5984 weight=10 max_fails=2000 fail_timeout=1m;
+    }
+
+
+    upstream couchdb-qaqc {
+        server 206.108.125.175:5984 weight=10 max_fails=2000 fail_timeout=1m;
     }
 
     # Social services like the wiki, blog, and forums.
@@ -195,7 +207,7 @@ http {
 
     upstream wormbase-gbrowse-staging {
         # OICR dedicated
-        server 206.108.125.164:8080      weight=10 max_fails=2000 fail_timeout=1m; 
+        server 206.108.125.164:8081      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
     upstream wormbase-legacy {
@@ -238,7 +250,7 @@ http {
   # 
   ##################################
   server {
-      server_name wormbase.org www.wormbase.org;
+      server_name wormbase.org www.wormbase.org wormbase.net www.wormbase.net;
       listen      80;
 		       
       access_log /usr/local/wormbase/logs/www/cache_log cache  buffer=16k;
@@ -279,7 +291,7 @@ http {
       }
 
       # Only requests to our Host are allowed
-      if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) { 
+      if ($host !~ ^(wormbase.org|www.wormbase.org|wormbase.net|www.wormbase.net)$ ) { 
          return 444;
       }
 
@@ -311,11 +323,60 @@ http {
       location /forums { 
            rewrite forums(.*) http://forums.wormbase.org$1 permanent;
       }
-    
+
+
+      location /perl/ace { 
+#           rewrite perl/ace/elegans/seq/sequence?gb=(.*) "http://www.wormbase.org/db/get?name=$2;class=sequence" permanent;
+#           rewrite ^/perl/ace/elegans/seq/sequence\?gb=(.*)$ "http://www.wormbase.org/db/get?name=$1;class=sequence" permanent;
+#	   rewrite perl/ace/elegans/seq/sequence\?gb=(.*) "http://www.wormbase.org/db/get?name=$1;class=sequence" permanent;
+	   rewrite ^ "http://www.wormbase.org/db/get?name=$arg_gb;class=sequence?" permanent;
+#           rewrite perl/ace(.*) http://forums.wormbase.org$1 permanent;
+	    
+      }    
+
        location / {
-            ########################################
-            #  Pool of PSGI/Starman hosts
-            ######################################## 
+             if ($request_method = 'OPTIONS') { 	     
+	             add_header 'Access-Control-Allow-Origin' '*';
+        
+	        #
+        	# Om nom nom cookies
+        	#
+ 
+	        add_header 'Access-Control-Allow-Credentials' 'true';
+        	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        
+		#
+        	# Custom headers and headers various browsers *should* be OK with but aren't
+       		#
+	 
+		add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        
+	        #
+        	# Tell client that this pre-flight info is valid for 20 days
+        	#
+ 
+	        add_header 'Access-Control-Max-Age' 1728000;
+        	add_header 'Content-Type' 'text/plain charset=UTF-8';
+        	add_header 'Content-Length' 0;
+ 
+	        return 204;
+     	    }
+ 
+	    if ($request_method = 'POST') {
+ 	       add_header 'Access-Control-Allow-Origin' '*';
+               add_header 'Access-Control-Allow-Credentials' 'true';
+               add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+               add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+     	    }
+ 
+	    if ($request_method = 'GET') {
+               add_header 'Access-Control-Allow-Origin' '*';
+               add_header 'Access-Control-Allow-Credentials' 'true';
+               add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+               add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+	    }
+
+
 	    proxy_pass http://wormbase;
 
            # Caching diretives
@@ -414,6 +475,12 @@ http {
         }
 
 
+        location /tools/wormmine {
+	#        location /wormmine {
+            allow all;
+            proxy_pass http://intermine-production/tools/wormmine;
+        }
+
 	# GBrowse, served by apache on a dedicated node.
 	location /tools/genome {
 #             proxy_pass http://206.108.125.173/tools/genome;
@@ -450,6 +517,7 @@ http {
 
 	# Send specific queries to wormbase mining
 	location /tools/blast_blat {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -457,6 +525,7 @@ http {
         }
 
 	location /tools/epic {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -465,6 +534,7 @@ http {
         }
 
 	location /tools/tree {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 404; # Please respect the robots.txt file !
              }
@@ -472,6 +542,7 @@ http {
         }
 
 	location /tools/gmap {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -480,6 +551,7 @@ http {
         }
 
 	location /tools/epcr {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -488,6 +560,7 @@ http {
 
 	# And send temporary images generated by those tools to the correct server.
 	location /media/images/blast_blat {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -495,6 +568,7 @@ http {
 	}
 
 	location /media/images/epic {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
@@ -504,25 +578,13 @@ http {
 
 
  	location /tools/queries {
+#                return 502; # Please respect the robots.txt file !
              if ($is_bot) {
                 return 403; # Please respect the robots.txt file !
              }
 	     proxy_pass http://wormbase-mining/tools/queries;
         }
    }
-
- # TEMPORARY HACK: Location widgets were precached against beta.wormbase.org
-
-   server {
-        listen 80;
-         server_name beta.wormbase.org;
-
-	# GBrowse, served by apache on a dedicated node.
-	location /tools/genome {
-#             proxy_pass http://206.108.125.173/tools/genome;
-	     proxy_pass http://wormbase-gbrowse/tools/genome;
-        }
-    }
 
     # HTTPs for logging in and registering.
     server {
@@ -701,6 +763,49 @@ http {
       error_page 502 /errors/system_maintenance.html;
 
       location / {
+
+             if ($request_method = 'OPTIONS') { 	     
+	             add_header 'Access-Control-Allow-Origin' '*';
+        
+	        #
+        	# Om nom nom cookies
+        	#
+ 
+	        add_header 'Access-Control-Allow-Credentials' 'true';
+        	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        
+		#
+        	# Custom headers and headers various browsers *should* be OK with but aren't
+        	#
+ 
+		add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        
+	        #
+        	# Tell client that this pre-flight info is valid for 20 days
+        	#
+ 
+	        add_header 'Access-Control-Max-Age' 1728000;
+        	add_header 'Content-Type' 'text/plain charset=UTF-8';
+        	add_header 'Content-Length' 0;
+ 
+	        return 204;
+     	    }
+ 
+	    if ($request_method = 'POST') {
+ 	       add_header 'Access-Control-Allow-Origin' '*';
+               add_header 'Access-Control-Allow-Credentials' 'true';
+               add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+               add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+     	    }
+ 
+	    if ($request_method = 'GET') {
+               add_header 'Access-Control-Allow-Origin' '*';
+               add_header 'Access-Control-Allow-Credentials' 'true';
+               add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+               add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+	    }
+
+
           # Pool of PSGI/Starman hosts
 	  proxy_pass http://wormbase-staging;
 
@@ -709,6 +814,14 @@ http {
 #         proxy_cache thecache;
 #         proxy_cache_key $scheme$proxy_host$request_uri;
        }
+
+
+        location /tools/wormmine {
+	#        location /wormmine {
+            allow all;
+            proxy_pass http://intermine-production/tools/wormmine;
+        }
+
 
 
 	# GBrowse, served by apache on a dedicated node.
@@ -895,8 +1008,8 @@ http {
             root  /usr/local/wormbase/website-shared-files/html;
         }
 
-	location /_utils {
-	     proxy_pass http://couchdb-staging/_utils;
+	location /couchdb/ {
+	     proxy_pass http://couchdb-qaqc/;
         }
 
 
