--- a/log4perl/root.conf
+++ b/log4perl/root.conf
@@ -4,8 +4,10 @@
 log4perl.rootlogger=DEBUG, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
 # Why full path here?
-log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/$hostname-access.log" };
+#log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/$hostname-access.log" };
 #log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-access.log" };
+log4perl.appender.logfile.filename=logs/wormbase-catalyst-access.log
+sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-access.log" };
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
@@ -13,7 +15,7 @@ log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 # separate logger for cache
 log4perl.logger.CHI=DEBUG, cache
 log4perl.appender.cache=Log::Log4perl::Appender::File
-log4perl.appender.cache.filename=logs/cache.log
+log4perl.appender.cache.filename=logs/wormbase-catalyst-cache.log
 log4perl.appender.cache.mode=append
 log4perl.appender.cache.layout=PatternLayout
 log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
@@ -23,8 +25,9 @@ log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
 log4perl.logger.WormBase.Web.Controller.Tools.Queries  = INFO, querylog
 log4perl.appender.querylog          = Log::Log4perl::Appender::File
 # Why full path here
-log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/$hostname-queries.log" };
+#log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "/usr/local/wormbase/logs/$hostname-queries.log" };
 #log4perl.appender.querylog.filename = sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-queries.log" };
+log4perl.appender.querylog.filename = logs/wormbase-catalyst-queries.log
 log4perl.appender.querylog.layout   = Log::Log4perl::Layout::PatternLayout
 log4perl.appender.querylog.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 
