--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -10,11 +10,12 @@
 acedump = "/usr/local/wormbase/tmp/staging/acedmp";
 search = "/usr/local/wormbase/databases";
 
+
 classes = (   { filename = "Paper.ace";
                 desc = ("author", "title", "journal", "page", "volume"); 
                 after = "LongText.ace"; }, 
               { filename = "Gene.ace";
-                desc = ("concise_description"); },
+                desc = ("concise_description", "dead", "merged_into"); },
               { filename = "Variation.ace";
                 desc = ("status", "gene", "remark"); },
               { filename = "Anatomy_term.ace";},
