removed google_bot from $is_bot checks

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -53,6 +53,7 @@ http {
     keepalive_timeout  0;
     #keepalive_timeout  65;
 
+
     # Suitable proxy defaults
     # Maximum time to connect to upstream servers
     proxy_connect_timeout           75s;
@@ -101,6 +102,15 @@ http {
        # Amazon 2nd instance
        server 10.224.7.171:5000    weight=10 max_fails=4000 fail_timeout=1m;
 #       server 10.76.254.176:5000    weight=10 max_fails=4000 fail_timeout=1m;
+
+
+	# Temp 3rd instance
+#	server 10.114.73.81:5000 weight=10 max_fails=4000 fail_timeout=1m;
+
+	# may want to play with this to deal with TIME_WAIT requests
+#	netstat -an|awk '/tcp/ {print $6}'|sort|uniq -c
+#	keepalive SERVERS
+
     }  
 
     # Data mining specific queries
@@ -217,7 +227,8 @@ http {
 
      map $http_user_agent $is_bot {
          default 0;
-         ~(crawl|Googlebot|Google|Slurp|spider|bingbot|tracker|click|parser|spider|genie0217)$ 1;
+#         ~(crawl|Googlebot|Google|Slurp|spider|bingbot|tracker|click|parser|spider|genie0217)$ 1;
+         ~(crawl|Slurp|spider|bingbot|tracker|click|parser|spider|genie0217)$ 1;
      }
 
 
@@ -418,12 +429,12 @@ http {
 
         location /stats/starman/core1 {
             allow all;
-	    proxy_pass http://10.80.130.4:5000/server-status;
+	    proxy_pass http://10.98.131.95:5000/server-status;
         }
 
         location /stats/starman/core2 {
             allow all;
-	    proxy_pass http://10.83.38.136:5000/server-status;
+	    proxy_pass http://10.224.7.171:5000/server-status;
         }
 
 	# Serve static files directly from nginx
@@ -630,7 +641,11 @@ http {
         }
 
 
-
+        location /tools/wormmine {
+	#        location /wormmine {
+            allow all;
+            proxy_pass http://intermine-production/tools/wormmine;
+        }
 
 	# GBrowse, served by apache on a dedicated node.
 	location /tools/genome {
@@ -874,9 +889,9 @@ http {
 	}
 
 
-        location /img-static {
-            root  /usr/local/wormbase/website-shared-files/html;
-        }
+#        location /img-static {
+#            proxy_pass http://wormbase-staging;
+#        }
 
 	location /_utils {
 	     proxy_pass http://couchdb-staging/_utils;
@@ -1205,7 +1220,6 @@ server {
 #  server (wb-dev.oicr.on.ca; 206.108.125.180)
 #
 #     abby   : 9002
-#     adrian : 9004
 #     todd   : 9001
 #
 ####################################################
@@ -1818,5 +1832,63 @@ server {
 	    proxy_pass http://206.108.125.181/;	   
         }
   }
-}
 
+
+
+
+
+#############################################
+#  intermine.wormbase.org
+#     PLEASE PRESERVE THIS REDIRECT 
+#     TO HANDLE URLs PUBLISHED BEFORE
+#     WE SETTLED ON A LOCATION.
+#############################################
+server {
+      server_name intermine.wormbase.org;
+      listen 80;
+		       
+      access_log /usr/local/wormbase/logs/intermine-redirector/cache_log cache;
+      access_log /usr/local/wormbase/logs/intermine-redirector/access_log main;
+      # Error log; other directives: notice | info
+      error_log  /usr/local/wormbase/logs/intermine-redirector/error_log warn;
+
+      # Enable gzip compression
+      gzip             on;
+      gzip_min_length  1000;
+      gzip_proxied     any;
+      gzip_types       text/xml text/plain application/xml;
+
+      include       mime.types;
+      default_type  application/octet-stream;
+
+      if ($is_bot) {
+           return 403; # Please respect the robots.txt file !
+      }
+
+      #############################################
+      #
+      # LOCKDOWN
+      #
+      #############################################      
+
+      # Only requests to our Host are allowed
+      if ($host !~ ^(intermine.wormbase.org)$ ) {
+         return 444;
+      }
+
+      # Only allow these request methods
+      if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
+         return 444;
+      }
+
+#      return 301 http://www.wormbase.org/tools/wormmine/$request_uri;
+      return 301 http://www.wormbase.org/tools/wormmine;
+
+
+#      location / {
+#	    proxy_pass http://206.108.125.180:9002;
+#       }
+
+    }
+
+}
